renamed index.html musicbox.html

--- a/musicbox.html
+++ b/musicbox.html
@@ -5,7 +5,7 @@
 	<title>Blooming</title>
 	<meta name="description" content="A cool one page music app in the style of Brian Eno and Peter Chilvers, also inspired by Eric Sorenson">
 	<meta name="author" content="WickedlySmart">
-	<link rel="stylesheet" href="blooming.css">
+	<link rel="stylesheet" href="musicbox.css">
 </head>
 
 <body>
@@ -13,6 +13,6 @@
 	<script src="BufferLoader.js"></script>
 	<script src="Audio.js"></script>
 	<script src="View.js"></script>
-	<script src="blooming.js"></script>
+	<script src="musicbox.js"></script>
 </body>
 </html>
